--- a/source/404.html
+++ b/source/404.html
@@ -87,6 +87,7 @@
   </script>
   <script async src='//www.google-analytics.com/analytics.js'></script>
   <!-- build:js assets/js/script.js -->
+  <script src="bower_components/lazysizes/lazysizes.js"></script>
   <script src="assets/js/script.js"></script>
   <!-- endbuild -->
 
