--- a/source/ui.html
+++ b/source/ui.html
@@ -187,7 +187,7 @@ add(a, b);</code></pre>
 
           <div class="media">
 
-            <figure class="media__obj media__obj--left">
+            <figure class="media__object media__object--left">
               <a href="#">
                 <picture>
                   <img data-src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48" class="lazyload">
@@ -204,7 +204,7 @@ add(a, b);</code></pre>
           </div>
 
           <pre><code>&lt;div class="media"&gt;
-  &lt;div class="media__obj media__obj--left"&gt;…&lt;/div&gt;
+  &lt;div class="media__object media__object--left"&gt;…&lt;/div&gt;
   &lt;div class="media__body"&gt;…&lt;/div&gt;
 &lt;/div&gt;</code></pre>
 
@@ -212,7 +212,7 @@ add(a, b);</code></pre>
 
           <div class="media">
 
-            <figure class="media__obj media__obj--right">
+            <figure class="media__object media__object--right">
               <a href="#">
                 <picture>
                   <img data-src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48" class="lazyload">
@@ -229,7 +229,7 @@ add(a, b);</code></pre>
           </div>
 
               <pre><code>&lt;div class="media"&gt;
-  &lt;div class="media__obj media__obj--right"&gt;…&lt;/div&gt;
+  &lt;div class="media__object media__object--right"&gt;…&lt;/div&gt;
   &lt;div class="media__body"&gt;…&lt;/div&gt;
 &lt;/div&gt;</code></pre>
 
@@ -237,7 +237,7 @@ add(a, b);</code></pre>
 
           <div class="media media--center">
 
-            <figure class="media__obj media__obj--left">
+            <figure class="media__object media__object--left">
               <a href="#">
                 <picture>
                   <img data-src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48" class="lazyload">
@@ -254,7 +254,7 @@ add(a, b);</code></pre>
           </div>
 
               <pre><code>&lt;div class="media media--center"&gt;
-  &lt;div class="media__obj media__obj--left"&gt;…&lt;/div&gt;
+  &lt;div class="media__object media__object--left"&gt;…&lt;/div&gt;
   &lt;div class="media__body"&gt;…&lt;/div&gt;
 &lt;/div&gt;</code></pre>
 
@@ -262,7 +262,7 @@ add(a, b);</code></pre>
 
           <div class="media">
 
-            <figure class="media__obj media__obj--left">
+            <figure class="media__object media__object--left">
               <a href="#">
                 <picture>
                   <img data-src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48" class="lazyload">
@@ -276,7 +276,7 @@ add(a, b);</code></pre>
 
               <div class="media">
 
-                <figure class="media__obj media__obj--left">
+                <figure class="media__object media__object--left">
                   <a href="#">
                     <picture>
                       <img data-src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48" class="lazyload">
@@ -297,11 +297,11 @@ add(a, b);</code></pre>
           </div>
 
           <pre><code>&lt;div class="media"&gt;
-  &lt;div class="media__obj media__obj--left"&gt;…&lt;/div&gt;
+  &lt;div class="media__object media__object--left"&gt;…&lt;/div&gt;
   &lt;div class="media__body"&gt;
 
     &lt;div class="media"&gt;
-      &lt;div class="media__obj media__obj--left"&gt;…&lt;/div&gt;
+      &lt;div class="media__object media__object--left"&gt;…&lt;/div&gt;
       &lt;div class="media__body"&gt;…&lt;/div&gt;
     &lt;/div&gt;
 
@@ -1250,7 +1250,7 @@ add(a, b);</code></pre>
 
               <article class="post media" itemscope itemtype="http://schema.org/Article">
 
-                <figure class="post__thumbnail media__obj--left">
+                <figure class="post__thumbnail media__object--left">
                   <a href="posts/post-title" itemprop="url">
                     <picture>
                       <img data-src="http://dummyimage.com/300x200/808080/fff.png" width="300" height="200" alt="" itemprop="image" class="lazyload">
@@ -1281,7 +1281,7 @@ add(a, b);</code></pre>
 
               <article class="post media" itemscope itemtype="http://schema.org/Article">
 
-                <figure class="post__thumbnail media__obj--left">
+                <figure class="post__thumbnail media__object--left">
                   <a href="posts/post-title" itemprop="url">
                     <picture>
                       <img data-src="http://dummyimage.com/300x200/808080/fff.png" width="300" height="200" alt="" itemprop="image" class="lazyload">
@@ -1312,7 +1312,7 @@ add(a, b);</code></pre>
 
               <article class="post media" itemscope itemtype="http://schema.org/Article">
 
-                <figure class="post__thumbnail media__obj--left">
+                <figure class="post__thumbnail media__object--left">
                   <a href="posts/post-title" itemprop="url">
                     <picture>
                       <img data-src="http://dummyimage.com/300x200/808080/fff.png" width="300" height="200" alt="" itemprop="image" class="lazyload">
@@ -1371,7 +1371,7 @@ add(a, b);</code></pre>
 
               <li class="comment media" itemscope itemtype="http://schema.org/Comment">
 
-                <div class="media__obj--left">
+                <div class="media__object--left">
                   <a href="users/author" itemprop="url">
                     <picture>
                       <img data-src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48" alt="" class="lazyload">
@@ -1392,7 +1392,7 @@ add(a, b);</code></pre>
 
               <li class="comment media" itemscope itemtype="http://schema.org/Comment">
 
-                <div class="media__obj--left">
+                <div class="media__object--left">
                   <a href="users/author" itemprop="url">
                     <picture>
                       <img data-src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48" alt="" class="lazyload">
@@ -1413,7 +1413,7 @@ add(a, b);</code></pre>
 
               <li class="comment media" itemscope itemtype="http://schema.org/Comment">
 
-                <div class="media__obj--left">
+                <div class="media__object--left">
                   <a href="users/author" itemprop="url">
                     <picture>
                       <img data-src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48" alt="" class="lazyload">
